split app gpg keyring into individual files